--- a/portfolio-website/src/app/globals.css
+++ b/portfolio-website/src/app/globals.css
@@ -1,15 +1,17 @@
+@import "@fontsource/inter/index.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #14171F;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #14171F;
     --foreground: #ededed;
   }
 }
@@ -18,4 +20,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  background-color: #030712;
 }
