--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,16 @@
   }
 }
 
+
+@layer base {
+  body {
+    @apply bg-no-repeat bg-fixed;
+    background-image: url('/assets/semicircles.png');
+    background-size: 90%;
+    background-position: 300% 20%;
+  }
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
@@ -25,6 +35,12 @@ body {
 .navbar {
   background-color: #030712;
 }
+
+.contact {
+  background-color: #030712;
+}
+
+
 
 * {
   cursor: url('/assets/cursor.png'), auto;
